# fingerprint-device-intelligence-android-demo

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: android.yml  firebase-release.yml  firebase_app_distribution.yml  google_play_upload.yml  sdk_release_validation.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/fingerprintjs/android/fpjs_pro_demo/: ExampleInstrumentedTest.kt  TimeUtilsTests.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni-helper.cpp
app/src/main/cpp/secret/: string.h
app/src/main/java/com/fingerprintjs/android/fpjs_pro_demo/: App.kt  MainActivity.kt
app/src/main/java/com/fingerprintjs/android/fpjs_pro_demo/constants/: URLs.kt  (+3 more)
app/src/main/res/drawable/: ic_book_filled_left_page.xml  ic_cloud_crossed.xml  ic_drn.xml  ic_exclamation_in_circle.xml  ic_fingerprint.xml  ic_hand_raised.xml  ic_launcher_foreground_mono.xml  ic_mail.xml  ic_splash_icon.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/fingerprintjs/android/fpjs_pro_demo/: HomeScreenUiStateCreatorUnitTests.kt  JSONSyntaxHighlighterTests.kt  JsonConversionUnitTest.kt  SmartSignalsBodyParserUnitTests.kt
config/detekt/: baseline.xml  detekt.yml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+133 files in other folders)
